--- a/khl/coverletter/school/coverletter-marymount.tex
+++ b/khl/coverletter/school/coverletter-marymount.tex
@@ -91,7 +91,7 @@
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Mathematics Teacher ()}
+\lettertitle{Job Application for Mathematics Teacher (advertised on jump.mingpao.com)}
 % How the letter is opened
 \letteropening{Dear Principal Kyle Chan,}
 % How the letter is closed
@@ -122,17 +122,19 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am writing to express my strong interest in the "Physics Teacher" position at Ying Wa Girls' School. I am particularly excited about this opportunity because it aligns perfectly with my desire to contribute to the advancement of open science practices in my alma mater and my home country.
+I am writing to express my strong interest in the "Mathematics Teacher" position at Marymount Secondary School. As a researcher with a deep passifor education, and being a Christian myself, I am excited to have the opportunity to teach in a Christian School.
 
-My current institute, the Centre for Science and Technology Studies (CWTS) at Leiden University, is renowned for its expertise in science studies research and has been at the forefront of open science initiatives, such as ``Plan S'' and UNESCO open science working groups. Through my association with CWTS, I have gained extensive exposure to various facets of open science. Moreover, CWTS has strong connections with science policy scholars in mainland China. I am happy to serve as a bridge between CUHK Library, CWTS, Chinese scholars, and other open science organizations.
+I received a master's degree and a bachelor's degree from the Chinese University of Hong Kong, majored in physics and minored in mathematics. Driven by my passion for using knowledge of physics and mathematics to contribute to society, I decided to pursue a doctoral degree in Social Sciences at Leiden University in the Netherlands, and I am currently in the final stage of completion. During my doctoral studies, I have unexpectedly developed an educational game to illustrate some concepts in physics, and I found teaching very fulfilling. Therefore, I decided to make a career change - coming back to Hong Kong to teach in secondary schools.
 
-Although my primary research focus has been on modeling the academic system rather than open science specifically, I have actively participated in several open science-related projects and events. For instance, I have been part of the CWTS working group responsible for the transition to open research information, utilizing databases like OpenAlex. Additionally, I played a key role in testing and managing the open access and open peer review platform, Orvium, for the International Conference on Science, Technology, and Innovation Indicators in 2023. Furthermore, I have contributed to open source software projects and shared my experiences in open source research software at various conferences and meetings. These experiences underscore my commitment to practicing and promoting open science.
+Throughout my academic career, I have frequently held teaching positions, accumulating a wealth of teaching experience. Although I have not taught full-time in secondary schools, I used to participate extensively in the youth work of the Boys' Brigade in Hong Kong. As a result, I have plenty of experience in educating and managing secondary students. I also provided additional maths and physics tutorials, whenever a student there needs my help. As an extra perk, I represented Hong Kong in the 2012 International Physics Olympiad and won a silver medal, and I served as a mentor of the Hong Kong team in 2016. If there is a need for a teacher with expertise in mathematics, physics, or STEAM competitions, I believe I possess the requisite skills and experience.
 
-My interdisciplinary academic background in physics, mathematics, social science, and software development equips me with a broad understanding of the needs of academic staff across diverse disciplines. Furthermore, I have successfully organized events and workshops involving administrative and library staff at Leiden University, demonstrating my ability to collaborate effectively with different stakeholders. Additionally, my fluency in English, Putonghua, and Cantonese enables me to work seamlessly with local, mainland Chinese, and international individuals.
+While the specialized academic knowledge may differ significantly from the content covered in secondary school textbooks, my interdisciplinary academic training has equiped me plenty of transferable skills to understand and meet the needs of the school and students. I also believe that the curiosity, critical thinking abilities, and data collection skills fostered through academic research are lifelong assets, and I am eager to guide students in developing these aspects through my teaching.
 
-One of my key strengths lies in my strong IT skills. I possess extensive experience in analyzing scientific and social science data, and I have actively contributed to various open source software projects using multiple programming languages. Furthermore, I have developed a simulation game from scratch, which has allowed me to explore the potential of game development in promoting open science and citizen science. An example of this is the ``Software Horror Escape Room'' game developed by the library staff in the Netherlands regarding the publication of academic software. I believe my IT skills could be valuable assets in providing digital services, improving open science infrastructure and engaging with the academic community.
+Growing up as a Christian, expecially after studying and attending churches abroad for several years, the faith has become a crucial part of my life. I am eager to practise my faith as a teacher and bring the Christian's value into the classroom.
 
-Although I may not have professional experience as a librarian, my unique combination of experiences and skills sets me apart for this position. I am eager to learn any additional traditional librarian skills that may be required. Thank you for considering my application. Currently, I am in Hong Kong until at least early April. I look forward to the opportunity to discuss my qualifications further.
+Thank you for considering my application. My resume is attached for your consideration. Currently, I am in Hong Kong to complete my thesis. I look forward to the opportunity to discuss my qualifications further.
+
+
 
 %\lettersection{Why Me?}
 
