--- a/khl/coverletter/school/coverletter-marymount.tex
+++ b/khl/coverletter/school/coverletter-marymount.tex
@@ -122,19 +122,19 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am writing to express my strong interest in the "Mathematics Teacher" position at Marymount Secondary School. As a researcher with a deep passifor education, and being a Christian myself, I am excited to have the opportunity to teach in a Christian School.
+I am writing to express my strong interest in the ``Mathematics Teacher'' position at Marymount Secondary School. As a researcher with a deep passion for education and being a Christian myself, I am excited to have the opportunity to teach in a Christian School.
 
-I received a master's degree and a bachelor's degree from the Chinese University of Hong Kong, majored in physics and minored in mathematics. Driven by my passion for using knowledge of physics and mathematics to contribute to society, I decided to pursue a doctoral degree in Social Sciences at Leiden University in the Netherlands, and I am currently in the final stage of completion. During my doctoral studies, I have unexpectedly developed an educational game to illustrate some concepts in physics, and I found teaching very fulfilling. Therefore, I decided to make a career change - coming back to Hong Kong to teach in secondary schools.
+I received a master's degree and a bachelor's degree from the Chinese University of Hong Kong, majoring in physics and minoring in mathematics. Driven by my passion for using knowledge of physics and mathematics to make a positive impact on society, I decided to pursue a doctoral degree in Social Sciences at Leiden University in the Netherlands, and I am currently in the final stage of completion. During my doctoral studies, I unexpectedly developed an educational game to illustrate complex physics concepts, which ignited my passion for teaching. This realization inspired me to transition my career back to Hong Kong, where I can share my knowledge and inspire secondary school students.
 
-Throughout my academic career, I have frequently held teaching positions, accumulating a wealth of teaching experience. Although I have not taught full-time in secondary schools, I used to participate extensively in the youth work of the Boys' Brigade in Hong Kong. As a result, I have plenty of experience in educating and managing secondary students. I also provided additional maths and physics tutorials, whenever a student there needs my help. As an extra perk, I represented Hong Kong in the 2012 International Physics Olympiad and won a silver medal, and I served as a mentor of the Hong Kong team in 2016. If there is a need for a teacher with expertise in mathematics, physics, or STEAM competitions, I believe I possess the requisite skills and experience.
+Although my teaching experience in secondary schools is limited, I have accumulated extensive teaching experience through various positions in academia. Besides, I actively participated in the youth work of the Boys' Brigade in Hong Kong, where I gained valuable experience in educating and managing secondary students. Furthermore, I have provided supplementary mathematics and physics tutorials to students seeking extra support, allowing me to refine my instructional skills. As a bonus, I represented Hong Kong in the 2012 International Physics Olympiad, where I proudly earned a silver medal. In 2016, I had the privilege of serving as a mentor for the Hong Kong team. I am confident in my ability to teach the core curriculum and provide additional mathematics, physics, and STEAM training to students.
 
-While the specialized academic knowledge may differ significantly from the content covered in secondary school textbooks, my interdisciplinary academic training has equiped me plenty of transferable skills to understand and meet the needs of the school and students. I also believe that the curiosity, critical thinking abilities, and data collection skills fostered through academic research are lifelong assets, and I am eager to guide students in developing these aspects through my teaching.
+While my specialized academic knowledge may differ from the content covered in secondary school textbooks, my interdisciplinary academic training has equipped me with a range of transferable skills. These skills enable me to understand and address the unique needs of both the school and its students. Furthermore, I firmly believe that the curiosity, critical thinking abilities, and data collection skills fostered through academic research are invaluable assets that can benefit students beyond their academic pursuits. I am eager to guide students in developing these aspects through my teaching and to create an engaging learning environment that promotes holistic growth.
 
-Growing up as a Christian, expecially after studying and attending churches abroad for several years, the faith has become a crucial part of my life. I am eager to practise my faith as a teacher and bring the Christian's value into the classroom.
+As a devoted Christian, I embrace the significance of integrating faith into all aspects of our lives. Having actively participated in
+local and international church communities, I understand the importance of promoting Christian values in the classroom. I am
+committed to creating an environment where students can grow academically, morally, and spiritually.
 
-Thank you for considering my application. My resume is attached for your consideration. Currently, I am in Hong Kong to complete my thesis. I look forward to the opportunity to discuss my qualifications further.
-
-
+Thank you for considering my application. I have attached my resume for your review. Currently, I am in Hong Kong to complete my thesis, and I would be grateful for the opportunity to discuss my qualifications further.
 
 %\lettersection{Why Me?}
 
