Update teacher resume

--- a/khl/resume/resume-teacher.tex
+++ b/khl/resume/resume-teacher.tex
@@ -144,7 +144,7 @@ Dedicated to providing additional Physics Olympiad training and STEAM education.
 \section{Qualifications}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Basic Law and National Security Law Test}{: Pass}
+     \textbf{Basic Law and National Security Law Test (Degree/Professional Grades)}{: Pass}
     }}
  \end{itemize}
 
@@ -158,8 +158,9 @@ Dedicated to providing additional Physics Olympiad training and STEAM education.
       {Leiden University}{Jun. 2019 -- present}
       \resumeItemListStart
         \resumeItem{Developed an educational game to illustrate physics concepts effectively}
-        \resumeItem{Designed and conducted IT training workshops for non-technical individuals}
-        \resumeItem{Presented research findings at various international conferences}
+        \resumeItem{Presented the game and other research findings at various international conferences}
+        \resumeItem{Designed mathematics and IT training courses for non-technical individuals}
+        \resumeItem{Conducted workshops on open science in collaboration with library staff}
       \resumeItemListEnd
       
     \resumeSubheading
@@ -203,8 +204,10 @@ Dedicated to providing additional Physics Olympiad training and STEAM education.
 \section{Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Languages}{: Cantonese (Native), English (Fluent), Putonghua (Fluent)} \\
+     \textbf{HKDSE}{: Mathematics, Mathematics Module 2, Physics} \\
      \textbf{STEAM}{: Software engineering, Data analysis, Research (Mathematics, Physics, Computational Social Science)}
+     \textbf{Languages}{: Cantonese (Native), English (Fluent), Putonghua (Fluent)} \\
+     \textbf{Music}{: Violin}
     }}
  \end{itemize}
 
