--- a/khl/coverletter/school/coverletter-shung-tak-catholic.tex
+++ b/khl/coverletter/school/coverletter-shung-tak-catholic.tex
@@ -88,7 +88,7 @@
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Teacher (Mathematics (+M2) \& IS) (advertised on jump.mingpao.com)}
+\lettertitle{Job Application for Teacher (Mathematics (+M2) \& IS)}
 % How the letter is opened
 \letteropening{Dear Principal Cecilia Tang,}
 % How the letter is closed
