Update teacher resume

--- a/khl/resume/resume-teacher.tex
+++ b/khl/resume/resume-teacher.tex
@@ -132,7 +132,7 @@ Dedicated to providing additional Physics Olympiad training and STEAM education.
   \resumeSubHeadingListStart
     \resumeSubheading
       {Leiden University}{Leiden, the Netherlands}
-      {Ph.D. in Social and Behavioural Sciences}{Jun. 2019 -- present $|$ Expected graduation: 2024}
+      {Ph.D. in Social Sciences (Quantitative Science Studies)}{Jun. 2019 -- present $|$ Expected graduation: 2024}
     \resumeSubheading
       {The Chinese University of Hong Kong}{Hong Kong, China}
       {M.Phil. in Physics, B.Sc. in Physics, minor in Mathematics}{Sep. 2012 -- Dec. 2018}
