--- a/khl/coverletter/school/coverletter-maryknoll-father.tex
+++ b/khl/coverletter/school/coverletter-maryknoll-father.tex
@@ -127,6 +127,8 @@ While I have not yet taught full-time in a secondary school, I have gained valua
 
 As a quantitative social scientist, I have had plenty of exposure to real-world applications of mathematics and physics. While the specialized knowledge acquired through academic research may differ significantly from the content of secondary school textbooks, the curiosity, critical thinking skills, and data analysis abilities cultivated in research are invaluable assets. I am eager to guide students in developing these skills and instilling in them a lifelong passion for learning. Additionally, my participation in the International Physics Olympiad, where I proudly earned a silver medal, and my subsequent role as a mentor for the Hong Kong team have provided me with a unique perspective on mathematics and physics education. I am confident that I can provide additional mathematics, physics, and STEAM training, further enriching the educational experience of students.
 
+As a devoted Christian, I embrace the significance of integrating faith into all aspects of our lives. Having actively participated in local and international church communities, I am committed to creating an environment where students can grow academically, morally, and spiritually.
+
 Thank you for considering my application. I have attached my resume for your review. Currently, I am in Hong Kong to complete my thesis. I would be grateful for the opportunity to discuss my qualifications further.
 
 %\lettersection{Why Me?}
