Update resume and cv

--- a/khl/cv/contents/skills-soft.tex
+++ b/khl/cv/contents/skills-soft.tex
@@ -12,7 +12,7 @@
 %---------------------------------------------------------
   \cvskill
     {Human Languages} % Category
-    {Cantonese, Putonghua, English} % Skills
+    {Cantonese (native), Putonghua (fluent), English (fluent)} % Skills
 
 %---------------------------------------------------------
   \cvskill
