--- a/khl/cv/cv-gifted.tex
+++ b/khl/cv/cv-gifted.tex
@@ -3,7 +3,6 @@
 % arara: lualatex
 % arara: clean: { extensions: [ acn,acr,alg,aux,bbl,bcf,blg,glg,glo,gls,idx,ilg,ind,ist,log,lof,lol,lot,out,ptc,toc,run.xml ]}
 
-
 %!TEX TS-program = xelatex
 %!TEX encoding = UTF-8 Unicode
 % Awesome CV LaTeX Template for CV/Resume
@@ -115,9 +114,9 @@ Enthusiastic researcher and software developer with a strong background in both 
 %-------------------------------------------------------------------------------
 \input{contents/education.tex}
 \input{contents/experience-soft.tex}
+\input{contents/teaching.tex}
 \input{contents/projects-soft.tex}
 \input{contents/skills-soft.tex}
-\input{contents/selected-academic-publications-soft.tex}
 \input{contents/selected-presentations.tex}
 %\input{contents/honors_and_awards.tex}
 \input{contents/committees.tex}
