--- a/khl/resume/resume-teacher.tex
+++ b/khl/resume/resume-teacher.tex
@@ -174,10 +174,10 @@ Dedicated to providing additional Physics Olympiad training and STEAM education.
 
     \resumeSubheading
       {Teaching Assistant}{Hong Kong, China}
-      {The Chinese University of Hong Kong}{Sep. 2016 - Feb. 2018}
+      {The Chinese University of Hong Kong}{Sep. 2016 -- Feb. 2018}
       \resumeItemListStart
         \resumeItem{Prepared and delivered tutorials for undergraduate students}
-        \resumeItem{Provided one-on-one consultations, guiding underperforming students towards improvement}
+        \resumeItem{Provided one-on-one consultations, guiding underperforming students towards improvements}
       \resumeItemListEnd
 
     \resumeSubheading
