--- a/khl/cv/contents/education.tex
+++ b/khl/cv/contents/education.tex
@@ -11,7 +11,7 @@
 
 %---------------------------------------------------------
   \cventry
-    {Ph.D. in Quantitative Science Studies}
+    {Ph.D. in Social and Behavioural Sciences (Quantitative Science Studies)}
     %{Ph.D. in Social and Behavioural Sciences} % Degree
     {Leiden University} % Institution
     {Leiden, The Netherlands} % Location
