Update gifted education

--- a/khl/cv/cv-gifted.tex
+++ b/khl/cv/cv-gifted.tex
@@ -106,7 +106,7 @@
   {\thepage}
 
 \vspace{1em}
-Enthusiastic researcher and software developer with a strong background in both physics and social science, seeking opportunities to leverage my quantitative and qualitative skills to drive innovation and contribute to meaningful projects.
+Enthusiastic researcher and software developer with a strong background in both physics and social science, seeking opportunities to apply my skills and experience in gifted education.
 
 %-------------------------------------------------------------------------------
 %	CV/RESUME CONTENT
