Update gifted cv

--- a/khl/cv/cv-gifted.tex
+++ b/khl/cv/cv-gifted.tex
@@ -125,6 +125,36 @@ Enthusiastic researcher and software developer with a strong background in both 
 %\input{contents/extracurricular.tex}
 %\input{contents/writing.tex}
 
+%-------------------------------------------------------------------------------
+%	SECTION TITLE
+%-------------------------------------------------------------------------------
+\cvsection{Others}
+
+
+%-------------------------------------------------------------------------------
+%	CONTENT
+%-------------------------------------------------------------------------------
+\begin{cvskills}
+
+%---------------------------------------------------------
+  \cvskill
+    {Current/last monthly salary} % Category
+    {16000} % Skills
+
+%---------------------------------------------------------
+  \cvskill
+    {Expected monthly salary} % Category
+    {20000 - 30000} % Skills
+
+%---------------------------------------------------------
+  \cvskill
+    {Availability} % Category
+    {06/2024} % Skills
+
+%---------------------------------------------------------
+\end{cvskills}
+
+
 
 %-------------------------------------------------------------------------------
 \end{document}
