--- a/khl/cv/cv-gifted.tex
+++ b/khl/cv/cv-gifted.tex
@@ -108,6 +108,8 @@
 \vspace{1em}
 Enthusiastic researcher and software developer with a strong background in both physics and social science, seeking opportunities to apply my skills and experience in gifted education.
 
+\vspace{2em}
+
 %-------------------------------------------------------------------------------
 %	CV/RESUME CONTENT
 %	Each section is imported separately, open each file in turn to modify content
@@ -128,7 +130,7 @@ Enthusiastic researcher and software developer with a strong background in both 
 %-------------------------------------------------------------------------------
 %	SECTION TITLE
 %-------------------------------------------------------------------------------
-\cvsection{Others}
+\cvsection{Other Information}
 
 
 %-------------------------------------------------------------------------------
