--- a/khl/coverletter/school/coverletter-yingwa-college.tex
+++ b/khl/coverletter/school/coverletter-yingwa-college.tex
@@ -86,14 +86,14 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Ying Wa Girls' School}
-  {76 Robinson Road, Hong Kong}
+  {Ying Wa College}
+  {No. 1 Ying Wa Street, Shamshuipo, Kowloon, Hong Kong}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Physics Teacher}
+\lettertitle{Job Application for Mathematics Teacher}
 % How the letter is opened
-\letteropening{Dear Principal Francis Kwan,}
+\letteropening{Dear Principal Chen Dion,}
 % How the letter is closed
 \letterclosing{Sincerely,}
 % Any enclosures with the letter
@@ -122,19 +122,17 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am writing to express my strong interest in the "Physics Teacher" position at Ying Wa Girls' School. I am particularly excited about this opportunity because it aligns perfectly with my desire to contribute to the advancement of open science practices in my alma mater and my home country.
+I am writing to express my strong interest in the ``Mathematics Teacher'' position at Ying Wa College. As a researcher with a deep passion for education and being a Christian myself, I am excited about the opportunity to contribute to your school's mission.
 
-My current institute, the Centre for Science and Technology Studies (CWTS) at Leiden University, is renowned for its expertise in science studies research and has been at the forefront of open science initiatives, such as ``Plan S'' and UNESCO open science working groups. Through my association with CWTS, I have gained extensive exposure to various facets of open science. Moreover, CWTS has strong connections with science policy scholars in mainland China. I am happy to serve as a bridge between CUHK Library, CWTS, Chinese scholars, and other open science organizations.
+I hold a master's degree and a bachelor's degree from the Chinese University of Hong Kong, majoring in physics and minoring in mathematics. Driven by my passion to apply scientific knowledge to make a positive impact on society, I decided to pursue a doctoral degree in Social Sciences at Leiden University in the Netherlands, where I am currently in the final stage of completion. During my doctoral studies, I developed a keen interest in education and even created an educational game to illustrate complex physics concepts, which further motivated me to return to Hong Kong and engage in secondary school teaching.
 
-Although my primary research focus has been on modeling the academic system rather than open science specifically, I have actively participated in several open science-related projects and events. For instance, I have been part of the CWTS working group responsible for the transition to open research information, utilizing databases like OpenAlex. Additionally, I played a key role in testing and managing the open access and open peer review platform, Orvium, for the International Conference on Science, Technology, and Innovation Indicators in 2023. Furthermore, I have contributed to open source software projects and shared my experiences in open source research software at various conferences and meetings. These experiences underscore my commitment to practicing and promoting open science.
+Throughout my academic and youth service career, I have held various teaching positions, gaining extensive experience instructing individuals from diverse backgrounds. While I have not yet taught full-time in a secondary school,  I possess the adaptability to tailor my teaching methods to suit the needs of different students. Notably, my voluntary work with the Boy's Brigade has required me to establish strong relationships with secondary school students from different backgrounds and provide them with academic guidance. I firmly believe that my skills and experience will enable me to meet the needs of students at your school.
 
-My interdisciplinary academic background in physics, mathematics, social science, and software development equips me with a broad understanding of the needs of academic staff across diverse disciplines. Furthermore, I have successfully organized events and workshops involving administrative and library staff at Leiden University, demonstrating my ability to collaborate effectively with different stakeholders. Additionally, my fluency in English, Putonghua, and Cantonese enables me to work seamlessly with local, mainland Chinese, and international individuals.
+Although the specialized knowledge acquired through academic research may differ significantly from the content of secondary school textbooks, the curiosity, critical thinking skills, and data collection abilities cultivated in research are invaluable lifelong assets. Therefore, I am eager to guide students in developing these skills through my teaching. Moreover, I had the honor of representing Hong Kong in the 2012 International Physics Olympiad, where I proudly earned a silver medal. Additionally, I served as a mentor for the Hong Kong team in 2016. Combining these experiences with my research background, I am confident in my ability to provide additional mathematics, physics, and STEAM training to students.
 
-One of my key strengths lies in my strong IT skills. I possess extensive experience in analyzing scientific and social science data, and I have actively contributed to various open source software projects using multiple programming languages. Furthermore, I have developed a simulation game from scratch, which has allowed me to explore the potential of game development in promoting open science and citizen science. An example of this is the ``Software Horror Escape Room'' game developed by the library staff in the Netherlands regarding the publication of academic software. I believe my IT skills could be valuable assets in providing digital services, improving open science infrastructure and engaging with the academic community.
+As a devoted Christian, I embrace the significance of integrating faith into all aspects of our lives. Having actively participated in local and international church communities, I am committed to creating an environment where students can grow academically, morally, and spiritually.
 
-Although I may not have professional experience as a librarian, my unique combination of experiences and skills sets me apart for this position. I am eager to learn any additional traditional librarian skills that may be required. Thank you for considering my application. Currently, I am in Hong Kong until at least early April. I look forward to the opportunity to discuss my qualifications further.
-
-%\lettersection{Why Me?}
+Thank you for considering my application. I have attached my resume for your review. Currently, I am in Hong Kong to complete my thesis. I would be grateful for the opportunity to discuss my qualifications further.
 
 \end{cvletter}
 
