--- a/khl/resume/resume-teacher.tex
+++ b/khl/resume/resume-teacher.tex
@@ -204,7 +204,7 @@ Dedicated to providing additional Physics Olympiad training and STEAM education.
 \section{Skills}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{HKDSE}{: Mathematics, Mathematics Module 2, Physics, Science} \\
+     \textbf{HKDSE Teaching}{: Mathematics, Mathematics Module 2, Physics, Science} \\
      \textbf{STEAM}{: Software engineering, Data analysis, Research (Mathematics, Physics, Computational Social Science)}
      \textbf{Languages}{: Cantonese (Native), English (Fluent), Putonghua (Fluent)} \\
      \textbf{Music}{: Violin}
