Update teacher resume

--- a/khl/resume/resume-teacher.tex
+++ b/khl/resume/resume-teacher.tex
@@ -144,7 +144,8 @@ Dedicated to providing additional Physics Olympiad training and STEAM education.
 \section{Qualifications}
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
-     \textbf{Basic Law and National Security Law Test (Degree/Professional Grades)}{: Pass}
+      \textbf{Basic Law and National Security Law Test (Degree/Professional Grades)}{: Pass} \\
+      \textbf{Test of English as a Foreign Language (TOEFL) - Internet-based test (iBT)}{: 104/120}
     }}
  \end{itemize}
 
@@ -205,7 +206,7 @@ Dedicated to providing additional Physics Olympiad training and STEAM education.
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{HKDSE Teaching}{: Mathematics, Mathematics Module 2, Physics, Science} \\
-     \textbf{STEAM}{: Software engineering, Data analysis, Research (Mathematics, Physics, Computational Social Science)}
+     \textbf{STEAM}{: Software engineering, Data analysis, Research (Mathematics, Physics, Computational Social Science)} \\
      \textbf{Languages}{: Cantonese (Native), English (Fluent), Putonghua (Fluent)} \\
      \textbf{Music}{: Violin}
     }}
