Update true light

--- a/khl/coverletter/school/coverletter-true-light-middle-school.tex
+++ b/khl/coverletter/school/coverletter-true-light-middle-school.tex
@@ -91,7 +91,7 @@
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Mathematics Teacher (advertised on jump.mingpao.com)}
+\lettertitle{Job Application for Physics Teacher (advertised on jump.mingpao.com)}
 % How the letter is opened
 \letteropening{Dear Principal Hui Tuen Yung Frances,}
 % How the letter is closed
@@ -122,7 +122,7 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am writing to express my strong interest in the ``Mathematics Teacher'' position at True Light Middle School of Hong Kong. As a researcher with a deep passion for education and being a Christian myself, I am excited about the opportunity to contribute to your school's mission and make a positive impact on students' lives.
+I am writing to express my strong interest in the ``Physics Teacher'' position at True Light Middle School of Hong Kong. As a researcher with a deep passion for education and being a Christian myself, I am excited about the opportunity to contribute to your school's mission and make a positive impact on students' lives.
 
 I hold both a master's degree and a bachelor's degree from the Chinese University of Hong Kong, majoring in physics and minoring in mathematics. Motivated by my desire to apply scientific knowledge for the betterment of society, I decided to pursue a doctoral degree in quantitative social science at Leiden University in the Netherlands, where I am currently in the final stage of completion. This interdisciplinary background has not only provided me with a strong theoretical understanding but has also enabled me to apply mathematical concepts to practical real-world scenarios.
 
