--- a/khl/resume/resume-challenge-hk.tex
+++ b/khl/resume/resume-challenge-hk.tex
@@ -123,7 +123,7 @@
 
 %-----------EDUCATION-----------
 \section{Summary}
-Enthusiastic indie game developer and researcher with a strong background in physics and computational social science. Experienced in software development, conducting innovative research, and solving complex problems.
+Software developer and researcher with a robust background in physics and computational social science. Skilled in developing complex software solutions and conducting innovative research.
 
 \section{Education}
   \resumeSubHeadingListStart
@@ -144,11 +144,9 @@ Enthusiastic indie game developer and researcher with a strong background in phy
       {Indie game developer}{Leiden, the Netherlands}
       {Self-employment}{Mar. 2022 -- present}
       \resumeItemListStart
-        \resumeItem{Independently developed a turn-based strategy game in Kotlin, incorporating sophisticated relativistic physics}
-        \resumeItem{Implemented multiplayer functionality and a user-friendly graphical interface for PC and Android}
-        \resumeItem{Created utility-based AI to determine actions from complex observations}
-        \resumeItem{Managed a codebase with 60K+ lines of code via Git}
-        \resumeItem{Presented the game at various conferences, including KotlinConf}
+        \resumeItem{Developed a turn-based strategy game in Kotlin, incorporating sophisticated relativistic physics.}
+        \resumeItem{Managed a codebase with over 60K lines of code using Git.}
+        \resumeItem{Presented at various conferences, including KotlinConf and FOSDEM.}
       \resumeItemListEnd
       
 % -----------Multiple Positions Heading-----------
@@ -165,21 +163,21 @@ Enthusiastic indie game developer and researcher with a strong background in phy
       {Researcher}{Leiden, the Netherlands}
       {Research on Research Institute (RORI)}{Jan. 2020 -- present}
       \resumeItemListStart
-        \resumeItem{Constructed Bayesian models to analyze the impact of funding application criteria on gender biases}
-        \resumeItem{Developed agent-based models in Java/Python/Julia to study the behavior of funding applicants}
-        \resumeItem{Conducted data analysis using Python and SQL, powered by AWS, PostgreSQL, and MSSQL}
-        \resumeItem{Collaborated with an international team spanning 5 countries}
+        \resumeItem{Constructed Bayesian models to analyze the impact of funding application criteria on gender biases.}
+        \resumeItem{Developed agent-based models in Java, Python, and Julia to study applicant behavior.}
+        \resumeItem{Conducted data analysis using Python, SQL, AWS, PostgreSQL, and MSSQL.}
+        \resumeItem{Collaborated with an international team across 5 countries.}
     \resumeItemListEnd
 
     \resumeSubheading
       {Researcher}{Hong Kong, China}
       {LIGO Scientific Collaboration (LSC)}{Sep. 2016 -- Aug. 2018}
       \resumeItemListStart
-        \resumeItem{Proposed models to detect black-hole horizon effects and gravitational wave lensing}
-        \resumeItem{Contributed to a C codebase for model implementation}
-        \resumeItem{Ran simulations on supercomputer clusters}
-        \resumeItem{Conducted Bayesian statistical analysis on simulated and real data using Python}
-        \resumeItem{Published 2 papers in reputable journals}
+        \resumeItem{Proposed models to detect black-hole horizon effects and gravitational wave lensing.}
+        \resumeItem{Contributed to a C codebase for model implementation.}
+        \resumeItem{Ran simulations on supercomputer clusters.}
+        \resumeItem{Conducted Bayesian statistical analysis on simulated and real data using Python.}
+        \resumeItem{Published 2 papers in reputable journals.}
       \resumeItemListEnd
 
   \resumeSubHeadingListEnd
@@ -189,23 +187,30 @@ Enthusiastic indie game developer and researcher with a strong background in phy
 \section{Projects}
     \resumeSubHeadingListStart
       \resumeProjectHeading
-          {\textbf{KSerGen} $|$ \emph{Kotlin, KSP, Gradle, Maven Central}}{Apr. 2023 -- present}
+          {\textbf{Godot LLM} $|$ \href{https://github.com/Adriankhl/godot-llm}{\underline{GitHub}} $|$ \emph{C++, SQL, GDScript}}{Apr. 2024 -- present}
           \resumeItemListStart
-            \resumeItem{Created a KSP plugin to automate generation of immutable data classes and serialization hierarchy}
-            \resumeItem{Published the plugin to Maven Central}
+            \resumeItem{Integrated local large language models with multimodal input into the Godot game engine.}
+            \resumeItem{Developed a retrieval-augmented generation framework based on SQLite.}
+            \resumeItem{Provided demos and authored detailed documentation.}
+            \resumeItem{Supported users on GitHub and Discord.}
+            \resumeItem{Contributed bug fixes to upstream libraries.}
           \resumeItemListEnd
       \resumeProjectHeading
-          {\textbf{Relativitization} $|$ \emph{Kotlin, Ktor, kotlinx.coroutine, Gradle, Python}}{Mar. 2021 -- present}
+          {\textbf{Relativitization} $|$ \href{https://github.com/Adriankhl/relativitization}{\underline{GitHub}} $|$ \emph{Kotlin, Ktor, kotlinx.coroutine, Gradle, Python}}{Mar. 2021 -- present}
           \resumeItemListStart
-            \resumeItem{Developed a parallel agent-based computational framework utilizing coroutines}
-            \resumeItem{Designed efficient algorithms and data structures for relativistic spacetime calculations}
-            \resumeItem{Automated testing using JUnit and GitHub Actions}
-            \resumeItem{Authored comprehensive documentation}
-            \resumeItem{Built an interstellar knowledge dynamics model, analyzed generated data with Python}
-            \resumeItem{Published 2 papers about the framework and model}
+            \resumeItem{Developed a parallel agent-based computational framework utilizing coroutines.}
+            \resumeItem{Designed efficient algorithms and data structures for relativistic spacetime calculations.}
+            \resumeItem{Automated testing using JUnit and GitHub Actions.}
+            \resumeItem{Authored comprehensive documentation.}
+            \resumeItem{Built models and a game using the framework.}
+            \resumeItem{Published 2 papers on the framework and model.}
+          \resumeItemListEnd
+      \resumeProjectHeading
+          {\textbf{KSerGen} $|$ \href{https://github.com/Adriankhl/ksergen}{\underline{GitHub}} $|$ \emph{Kotlin, KSP, Gradle, Maven Central}}{Apr. 2023 -- Aug. 2023}
+          \resumeItemListStart
+            \resumeItem{Created a KSP plugin to automate the generation of immutable data classes and serialization hierarchies.}
           \resumeItemListEnd
     \resumeSubHeadingListEnd
-
 
 
 %
@@ -214,8 +219,7 @@ Enthusiastic indie game developer and researcher with a strong background in phy
  \begin{itemize}[leftmargin=0.15in, label={}]
     \small{\item{
      \textbf{Languages}{: Kotlin, Java, SQL, Python, Julia, C/C++, Bash, LaTeX} \\
-     \textbf{Frameworks and Libraries}{: Ktor, kotlinx.coroutine, KSP, libGDX, pandas, NumPy, Matplotlib} \\
-     \textbf{Tools}{: Git, Linux, Gradle, Vim, Android Studio, IntelliJ} \\
+     \textbf{Tools and Libraries}{: Git, Linux, Godot, kotlinx.coroutine, pandas, NumPy} \\
     }}
  \end{itemize}
 
