--- a/khl/cv/contents/experience-soft.tex
+++ b/khl/cv/contents/experience-soft.tex
@@ -21,7 +21,7 @@
         \item{Implemented a RESTful server-client architecture and user-friendly graphical interfaces for PC and Android}
         \item{Created utility-based AI to determine actions from complex observations}
         \item{Managed a codebase with 60K+ lines of code via Git}
-        \item{Presented the game at various conferences, including KotlinConf}
+        \item{Presented the game at various conferences, including KotlinConf and FOSDEM}
       \end{cvitems}
     }
 
