--- a/khl/cv/contents/projects-soft.tex
+++ b/khl/cv/contents/projects-soft.tex
@@ -11,6 +11,21 @@
 
 %---------------------------------------------------------
   \cventry
+    {\emph{C++, SQL, GDScript}} % Research project
+    {Large language model in Godot engine} % Research organization
+    {} % Location
+    {Apr. 2024 - present} % Date(s)
+    {
+      \begin{cvitems} % Description(s) of tasks/responsibilities
+        \item{Integrated local large language models with multimodal input into the Godot game engine.}
+        \item{Developed a retrieval-augmented generation framework based on SQLite.}
+        \item{Provided demos and authored detailed documenkktation.}
+        \item{Supported users on GitHub and Discord.}
+        \item{Contributed bug fixes to upstream libraries.}
+      \end{cvitems}
+    }
+
+  \cventry
     {\emph{Python, SQL}} % Research project
     {FAIR text-mining and citation analysis} % Research organization
     {} % Location
@@ -21,6 +36,7 @@
         \item{Investigated references to FAIR principles in policy documents}
       \end{cvitems}
     }
+
 
   \cventry
     {\emph{Python, igraph, Julia, Agents.jl, Kotlin}} % Research project
@@ -36,19 +52,6 @@
       \end{cvitems}
     }
 
-  \cventry
-    {\emph{Kotlin, Ktor, kotlinx.coroutine, Gradle, Python}} % Research project
-    {Relativitization} % Research organization
-    {} % Location
-    {Mar. 2021 - present} % Date(s)
-    {
-      \begin{cvitems} % Description(s) of tasks/responsibilities
-        \item{Repository: \href{https://github.com/adriankhl/relativitization}{\underline{\smash{github.com/adriankhl/relativitization}}}}
-        \item{Developed a parallel agent-based computational framework utilizing coroutines}
-        \item{Designed efficient algorithms and data structures for relativistic spacetime calculations}
-        \item{Authored comprehensive documentation and tests}
-      \end{cvitems}
-    }
 
   \cventry
     {\emph{Python, PyStan, pandas, SQL}} % Research project
