--- a/khl/cv/cv-lib.tex
+++ b/khl/cv/cv-lib.tex
@@ -64,7 +64,7 @@
 \position{Phd Candidate}
 %\address{42-8, Bangbae-ro 15-gil, Seocho-gu, Seoul, 00681, Rep. of KOREA}
 
-\mobile{(+31) 6-2184-1392}
+\mobile{(+852) 9171-2155}
 \email{adrian.k.h.lai@gmail.com}
 %\dateofbirth{January 1st, 1970}
 %\homepage{www.posquit0.com}
