Add bu cover letter

--- a/khl/resume/resume-challenge-hk.tex
+++ b/khl/resume/resume-challenge-hk.tex
@@ -191,7 +191,7 @@ Software developer and researcher with a robust background in physics and comput
           \resumeItemListStart
             \resumeItem{Integrated local large language models with multimodal input into the Godot game engine.}
             \resumeItem{Developed a retrieval-augmented generation framework based on SQLite.}
-            \resumeItem{Provided demos and authored detailed documentation.}
+            \resumeItem{Provided demos and authored detailed documentation, automated CI using GitHub Actions.}
             \resumeItem{Supported users on GitHub and Discord.}
             \resumeItem{Contributed bug fixes to upstream libraries.}
           \resumeItemListEnd
