--- a/khl/resume/resume-challenge-hk.tex
+++ b/khl/resume/resume-challenge-hk.tex
@@ -189,7 +189,7 @@ Software developer and researcher with a robust background in physics and comput
       \resumeProjectHeading
           {\textbf{Godot LLM} $|$ \href{https://github.com/Adriankhl/godot-llm}{\underline{GitHub}} $|$ \emph{C++, SQL, GDScript}}{Apr. 2024 -- present}
           \resumeItemListStart
-            \resumeItem{Integrated local large language models with multimodal input into the Godot game engine.}
+            \resumeItem{Integrated local large language models with multimodal input into Godot game engine.}
             \resumeItem{Developed a retrieval-augmented generation framework based on SQLite.}
             \resumeItem{Provided demos and authored detailed documentation, automated CI using GitHub Actions.}
             \resumeItem{Supported users on GitHub and Discord.}
