Fix resume teacher

--- a/khl/resume/resume-teacher.tex
+++ b/khl/resume/resume-teacher.tex
@@ -137,7 +137,7 @@ Dedicated to providing additional Physics Olympiad training and STEAM education.
       {The Chinese University of Hong Kong}{Hong Kong, China}
       {M.Phil. in Physics, B.Sc. in Physics, minor in Mathematics}{Sep. 2012 -- Dec. 2018}
     \resumeSubheading
-      {Shatin Pui Yin College}{Hong Kong, China}
+      {Shatin Pui Ying College}{Hong Kong, China}
       {HKDSE: Mathematics compulsory (5*) and Extended M2 (5*), Physics (5)}{Sep. 2006 -- Aug. 2012}
   \resumeSubHeadingListEnd
 
