--- a/khl/coverletter/school/coverletter-fwft.tex
+++ b/khl/coverletter/school/coverletter-fwft.tex
@@ -1,4 +1,4 @@
-%arara: lualatex
+% arara: lualatex
 % arara: clean: { extensions: [ acn,acr,alg,aux,bbl,bcf,blg,glg,glo,gls,idx,ilg,ind,ist,log,lof,lol,lot,out,ptc,toc,run.xml ]}
 
 %!TEX TS-program = xelatex
@@ -15,7 +15,6 @@
 % Template license:
 % CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/)
 %
-
 
 %-------------------------------------------------------------------------------
 % CONFIGURATIONS
@@ -58,7 +57,7 @@
 \position{Phd Candidate}
 %\address{235, World Cup buk-ro, Mapo-gu, Seoul, 03936, Republic of Korea}
 
-\mobile{(+852) 9171-2155 / (+31) 6-2184-1392}
+\mobile{(+852) 9171-2155}
 \email{adrian.k.h.lai@gmail.com}
 %\dateofbirth{January 1st, 1970}
 %\homepage{www.posquit0.com}
@@ -86,14 +85,14 @@
 %-------------------------------------------------------------------------------
 % The company being applied to
 \recipient
-  {Information Technology Services Centre, The Chinese University of Hong Kong}
-  {Hong Kong}
+  {Tung Wah Group of Hospitals Mrs. Fung Wong Fung Ting College}
+  {3-5 Lek Yuen Street, Lek Yuen Estate, Shatin, N.T}
 % The date on the letter, default is the date of compilation
 \letterdate{\today}
 % The title of the letter
-\lettertitle{Job Application for Assistant Computer Officer - (240001J9)}
+\lettertitle{Job Application for Physics Graduate Master Teacher (advertised on jump.mingpao.com)}
 % How the letter is opened
-\letteropening{Dear Hiring Manager,}
+\letteropening{Dear Principal,}
 % How the letter is closed
 \letterclosing{Sincerely,}
 % Any enclosures with the letter
@@ -122,14 +121,17 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am writing to express my strong interest in the "Assistant Computer Officer" position at the Chinese University of Hong Kong. I am particularly excited about this opportunity because it aligns perfectly with my desire to transition my research career to research software.
+I am writing to express my strong interest in the "Physics Graduate Master Teacher" position at Tung Wah Group of Hospitals Mrs. Fung Wong Fung Ting College. As a researcher with a profound passion for education, I am excited about the opportunity to contribute to your school's mission and positively impact students' lives.
 
+I hold both a Master's and a Bachelor's degree from the Chinese University of Hong Kong, majoring in Physics and minoring in Mathematics. Driven by my desire to apply scientific knowledge for societal betterment, I pursued a doctoral degree in Quantitative Social Science at Leiden University in the Netherlands, where I am currently in the final stages of completion. This interdisciplinary background has provided me with a robust theoretical foundation and enabled me to apply mathematical concepts to practical, real-world scenarios.
 
+Throughout my academic journey, I developed a keen interest in education. To further this passion, I created an educational game that effectively illustrates complex physics concepts to students. This experience reinforced my belief in the potential of interactive and engaging teaching methods and ignited my desire to pursue a career in secondary school teaching in Hong Kong.
 
+My academic and youth service career includes various teaching positions where I gained extensive experience instructing individuals from diverse backgrounds. While I have not yet taught full-time in a secondary school, I possess the adaptability to tailor my teaching methods to suit different students' needs. Notably, my voluntary work with the Boy's Brigade required me to manage groups of secondary school students from varying backgrounds, establish strong relationships with these students, and provide them with academic guidance. I firmly believe that my skills and experience will enable me to meet the needs of students at your school.
 
+Although the specialized knowledge I acquired through academic research differs from secondary school curriculum content, the curiosity, problem-solving skills, and data collection abilities cultivated in research are invaluable lifelong assets. I am eager to guide students in developing these skills through my teaching. Additionally, I have had the honor of representing Hong Kong in the 2012 International Physics Olympiad, where I earned a silver medal, and serving as a mentor for the Hong Kong team in 2016. Combining these experiences with my research background, I am confident in my ability to provide additional Mathematics, Physics, and STEAM training to students.
 
-
-%\lettersection{Why Me?}
+Thank you for considering my application. I have attached my resume for your review. Currently, I am in Hong Kong to complete my thesis, and I would be grateful for the opportunity to discuss my qualifications further.
 
 \end{cvletter}
 
