Add hpc coverletter

--- a/khl/coverletter/coverletter-cuhk-hpc.tex
+++ b/khl/coverletter/coverletter-cuhk-hpc.tex
@@ -122,12 +122,17 @@
 %-------------------------------------------------------------------------------
 \begin{cvletter}
 
-I am writing to express my strong interest in the "Assistant Computer Officer" position at the Chinese University of Hong Kong. I am particularly excited about this opportunity because it aligns perfectly with my desire to transition my research career to research software.
+I am writing to express my strong interest in the "Assistant Computer Officer" position at the Chinese University of Hong Kong. This opportunity excites me as it aligns perfectly with my aspiration to transition into research software.
 
+My academic journey has uniquely blended physics, computational social science, and software engineering, providing me with exposure to high-performance computing (HPC) across both scientific and social science domains. I have experience in developing software using a variety of programming languages, including C, C++, Python, Java, and Kotlin. Notable projects I have developed include a simulation framework in Kotlin and a large language model library in C++. I am confident that my diverse and robust technical skills can significantly contribute to academic software development for HPC at CUHK.
 
+I am an active open-source contributor, having resolved numerous issues in open-source software to ensure they compile and run correctly on both Windows and Linux. I have also contributed packages to openSUSE Tumbleweed through the Open Build Service. Additionally, I have written several shell scripts to manage my Windows and Linux PCs, demonstrating my capabilities in system administration.
 
+Recently, my interest has expanded to large language model inference. My large language model library relies on the llama.cpp library, to which I have contributed several features and fixes, particularly for the Vulkan compute backend. This experience has provided me with valuable exposure to GPU programming and hardware.
 
+My interdisciplinary academic background has given me a broad understanding of the needs of academic staff across diverse disciplines. I have successfully organized conferences, events, and workshops involving administrative and library staff at Leiden University. Additionally, I have been actively providing support for my software on GitHub and Discord, showcasing my ability to collaborate effectively with various stakeholders. My fluency in Cantonese, English, and Putonghua further enables me to work seamlessly with local, mainland Chinese, and international colleagues.
 
+Thank you for considering my application. I am currently in Hong Kong completing my thesis and would welcome the opportunity to discuss my qualifications further.
 
 %\lettersection{Why Me?}
 
