Update public health

--- a/khl/coverletter/coverletter-hku-public-health.tex
+++ b/khl/coverletter/coverletter-hku-public-health.tex
@@ -126,7 +126,7 @@ I am writing to express my enthusiastic interest in the position of "Technical M
 
 My academic journey has been a unique blend of physics, computational social science, and software engineering, providing me with a diverse and robust skill set that aligns well with the role. I have a proven track record in multiple technical domains, including proficiency in analyzing scientific and social science datasets. One of my projects focused on knowledge diffusion among scholars, closely related to epidemiologic models. I have extensive exposure to network analysis, which is also relevant to epidemiology. I am confident in my capability to adapt my skills to topics in public health.
 
-In addition to my data analysis and research experience, I am well-versed in software development. I am an active contributor to open-source projects, with my flagship software projects including an agent-based simulation framework and a large language model library. I am also experienced in managing databases and Linux systems. As research software becomes increasingly important in academia, I believe my unique blend of academic expertise and software development skills would make me a valuable addition to the university.
+In addition to my data analysis and research experience, I am well-versed in software development. I am an active contributor to open-source projects, with my flagship software projects including an agent-based simulation framework and a large language model library. I am also experienced in databases, Linux, and high performance computing. As research software becomes increasingly important in academia, I believe my unique blend of academic expertise and software development skills would make me a valuable addition to the university.
 
 My interdisciplinary academic background has given me a broad understanding of the needs of academic staff across diverse disciplines. I have successfully organized conferences, events, and workshops involving administrative and library staff at Leiden University. Additionally, I have been actively providing support for my software on GitHub and Discord, showcasing my ability to collaborate effectively with various stakeholders. My fluency in Cantonese, English, and Putonghua further enables me to work seamlessly with local, mainland Chinese, and international colleagues.
 
